src/components/SideMenu/Project/Project.module.css
.new-project{
    width: 100%;
    height: 100%;
    background-color: #171717;
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 10px;
    position: absolute;
    animation-name: showNewProject;
    animation-duration: 0.1s;
    z-index: 10;
}

@keyframes showNewProject {
    from{
        width: 0;
        opacity: 0;
    }
    to{
        width: 100%;
        opacity: 1;
    }
}
img{
    width: 30px;
    height: 30px;
}

.header{
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.header button{
    background-color: transparent !important;
    border: none;
}

fieldset{
    border: none;
    display: flex;
    flex-direction: column;
    gap: 5px;
}
.new-project input{
    height: 40px;
    border: none;
    border-radius: 5px;
    color: black;
    padding-left: 10px;
    font-size: large;
}
#color-input{
    padding: 0;
}
.new-project button{
    background-color: #0F0F0F;
    margin-top: auto;
    margin-bottom: 25px;
}

@media (orientation: portrait) {
    




}

